--- a/innovix/src/main/resources/application.properties
+++ b/innovix/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=innovix
+spring.datasource.url=jdbc:postgresql://postgres-service:5432/innovix
+spring.datasource.username=universityInnovix
+spring.datasource.password=abc12345
+spring.datasource.driver-class-name=org.postgresql.Driver
